макет без мобильной верстки

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -242,12 +242,18 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif; /* 1 */
+  
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
 }
 
+input,
+optgroup,
+select,
+textarea {
+    font-family: sans-serif; /* 1 */
+    margin: 0; /* 2 */
+}
 /**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
