--- a/css/style.css
+++ b/css/style.css
@@ -1,107 +1,601 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,800');
-* {
-    box-sizing: border-box;
-}
-
-body {
-    max-width: 1170px;
-    margin: auto;
-    font-family: 'Open Sans', sans-serif;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    height: 702px;
-}
-
-.logobox {
-    display: flex;
-    height: 140px;
-}
-
-#log {
-    width: 50%;
-    padding: 74px 0;
-}
-
-#navig {
-    width: 50%;
-}
-
-ul {
-    list-style: none;
-}
-
-#pos {
-    display: flex;
-    justify-content: space-between;
-    width: 479px;
-    margin-left: 101px;
-    margin-top: 72px;
-}
-
-li {
-    display: inline;
-}
-
-a {
-    font-size: 20px;
-    font-weight: 700;
-    color: black;
-    text-decoration: none;
-}
-
-#underl {
-    display: block;
-    width: 105px;
-    height: 5px;
-    border: 1px solid black;
-    background-color: black;
-    margin-left: 246px;
-    margin-top: -13px;
-}
-
-.banner {
-    background-image: url(../img/banner.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 562px;
-    position: relative;
-}
-
-#text1 {
-    position: absolute;
-    width: 542px;
-    height: 200px;
-    margin-top: 77px;
-    margin-left: 317px;
-    outline: 1px solid black;
-    font-size: 90px;
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=cyrillic');
+    * {
+        box-sizing: border-box;
+    }
+    
+    body {
+        max-width: 1170px;
+        height: 4200px;
+        margin: auto;
+        font-family: 'Open Sans', sans-serif;
+    }
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        height: 742px;
+        margin-bottom: -48px;
+    }
+    
+    .logobox {
+        display: flex;
+        height: 180px;
+    }
+    
+    #log {
+        width: 50%;
+        padding: 74px 0;
+    }
+    
+    #navig {
+        width: 50%;
+    }
+    
+    ul {
+        list-style: none;
+    }
+    
+    #pos {
+        display: flex;
+        justify-content: space-between;
+        width: 479px;
+        margin-left: 101px;
+        margin-top: 72px;
+    }
+    
+    li {
+        display: inline;
+    }
+    
+    #pos a:hover,
+    .navig a:hover,
+    #menu1 a:hover{
+        color: green;
+        text-shadow: 2px 2px 10px rgba(60, 90, 90, 0.7);
+    }
+    
+    a {
+        font-size: 20px;
+        font-weight: 700;
+        color: black;
+        text-decoration: none;
+    }
+    
+    #underl {
+        display: block;
+        width: 105px;
+        height: 5px;
+        border: 1px solid black;
+        background-color: black;
+        margin-left: 246px;
+        margin-top: -13px;
+    }
+    
+    .banner {
+        background-image: url(../img/banner.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        height: 562px;
+        position: relative;
+    }
+    
+    p {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    
+    #text1 {
+        position: absolute;
+        width: 542px;
+        height: 200px;
+        margin-top: 168px;
+        margin-left: 317px;
+        font-size: 90px;
+        font-weight: 800;
+        letter-spacing: 11.5px;
+        color: white;
+        text-align: center;
+        text-shadow: 3px 4px 20px rgba(48, 48, 48, 0.7);
+    }
+    
+    .banner::before {
+        content: 'ENJOY THE PLEASURE';
+        background-image: url(../img/circle.png);
+        background-repeat: no-repeat;
+        position: relative;
+        display: block;
+        width: 380px;
+        height: 61px;
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: 1px;
+        float: left;
+        color: black;
+        transform: rotate(-90deg);
+        left: -217px;
+        top: 303px;
+        padding-left: 30px;
+        padding-bottom: 2px;
+    }
+    
+    .article1,
+    .article2,
+    .article3,
+    .article4 {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .article1 {
+        height: 390px;
+    }
+    
+    .article2 {
+        height: 680px;
+    }
+    
+    .article3 {
+        height: 656px;
+    }
+    
+    .article4 {
+        height: 585px;
+        margin-bottom: 0;
+    }
+    
+    .article4 .box2 h1 {
+        padding-left: 15px;
+        margin-top: 0;
+    }
+    
+    .box1,
+    .box2 {
+        width: 540px;
+    }
+    
+    .article1 .box1 {
+        padding-top: 100px;
+    }
+    
+    .article1 .box2 {
+        padding-top: 60px;
+    }
+    
+    .article2 .box1 {
+        padding-top: 60px;
+    }
+    
+    .article2 .box2 {
+        padding-top: 60px;
+    }
+    
+    .article3 .box1 {
+        padding-top: 380px;
+    }
+    
+    .article3 .box2 {
+        padding-top: 0;
+    }
+    
+    time {
+        font-size: 25px;
+        font-weight: 800;
+    }
+    
+    .b2time time {
+        padding-left: 471px;
+    }
+    
+    .box1 h1,
+    .box2 h1 {
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin-top: 21px;
+        margin-bottom: 21px;
+    }
+    
+    .box1 h1 {
+        padding-left: 0;
+    }
+    
+    .box1 h1,
+    .box2 h1 span {
+        font-size: 60px;
+    }
+    
+    .box2 h1 {
+        font-size: 45px;
+        padding-left: 205px;
+        text-align: end;
+    }
+    
+    .article3 h1 {
+        font-size: 79px;
+    }
+    
+    .box1 p,
+    .box2 p {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 30px;
+    }
+    
+    .box2 p {
+        padding-top: 35px;
+        padding-right: 35px;
+    }
+    
+    .box1 a,
+    .box2 a {
+        line-height: 4;
+    }
+    
+    .box1 a:hover,
+    .box2 a:hover {
+        color: red;
+    }
+    
+    .deco {
+        display: block;
+        width: 25%;
+        height: 110px;
+        position: absolute;
+        margin-left: 447px;
+        margin-top: -160px;
+    }
+    
+    .fi,
+    .sec,
+    .th {
+        width: 267px;
+        height: 4px;
+    }
+    
+    .fi,
+    .sec {
+        margin-bottom: 45px;
+    }
+    
+    .sec {
+        margin-left: 53px;
+        background: #000000;
+        /* Old browsers */
+        background: -moz-linear-gradient(left, #000000 0%, #000000 0%, #000000 49%, #fcfcfc 49%, #fcfcfc 100%, #fcfcfc 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #000000 0%, #000000 0%, #000000 49%, #fcfcfc 49%, #fcfcfc 100%, #fcfcfc 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #000000 0%, #000000 0%, #000000 49%, #fcfcfc 49%, #fcfcfc 100%, #fcfcfc 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#fcfcfc', GradientType=1);
+        /* IE6-9 */
+    }
+    
+    .th {
+        margin-left: 20px;
+        background: #000000;
+        /* Old browsers */
+        background: -moz-linear-gradient(left, #000000 0%, #000000 0%, #000000 61%, #fcfcfc 61%, #fcfcfc 100%, #fcfcfc 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #000000 0%, #000000 0%, #000000 61%, #fcfcfc 61%, #fcfcfc 100%, #fcfcfc 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #000000 0%, #000000 0%, #000000 61%, #fcfcfc 61%, #fcfcfc 100%, #fcfcfc 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#fcfcfc', GradientType=1);
+        /* IE6-9 */
+    }
+    
+    .fi {
+        background: #000000;
+        /* Old browsers */
+        background: -moz-linear-gradient(left, #000000 0%, #000000 0%, #000000 69%, #fcfcfc 69%, #fcfcfc 100%, #fcfcfc 100%);
+        /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #000000 0%, #000000 0%, #000000 69%, #fcfcfc 69%, #fcfcfc 100%, #fcfcfc 100%);
+        /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #000000 0%, #000000 0%, #000000 69%, #fcfcfc 69%, #fcfcfc 100%, #fcfcfc 100%);
+        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#fcfcfc', GradientType=1);
+        /* IE6-9 */
+    }
+    
+    .deco2,
+    .deco4 {
+        width: 530px;
+        display: block;
+        background-color: #f6f6f6;
+    }
+    
+    .deco2 {
+        height: 166px;
+        margin-left: 541px;
+        margin-top: -513px;
+        margin-bottom: 66px;
+    }
+    
+    .deco4 {
+        height: 450px;
+        margin-left: 541px;
+        margin-top: -501px;
+        margin-bottom: 66px;
+    }
+    
+    .article3 .box2::after {
+        content: 'FREE PSD  TEMPLATE AVAILABLE OD SYMU.CO';
+        font-size: 18px;
+        font-weight: 300;
+        position: relative;
+        display: block;
+        width: 482px;
+        height: 61px;
+        letter-spacing: 1px;
+        float: left;
+        color: black;
+        transform: rotate(-90deg);
+        left: 352px;
+        top: -328px;
+    }
+    
+    .deco3 {
+        width: 440px;
+        height: 540px;
+        background-image: url(../img/deco3.png);
+        background-repeat: no-repeat;
+        margin-left: 57px;
+        margin-top: -522px;
+    }
+    
+    .sign_up {
+        width: auto;
+        height: 283px;
+        background-image: url(../img/sign_up.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 60px;
+    }
+    
+    .sign_up h1 {
+        font-size: 50px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        color: white;
+        text-shadow: 0px 0px 20px rgba(48, 48, 48, 0.7);
+        text-align: center;
+        padding-top: 89px;
+        padding-left: 66px;
+        margin-bottom: 31px;
+    }
+    
+    .sign_up a:hover {
+        font-size: 17px;
+        color: green;
+        text-shadow: 0px 0px 20px black;
+        opacity: 0.95;
+        
+    }
+    
+    .sign_up a {
+            width: 155px;
+    height: 31px;
+    border-radius: 45px;
+    margin-left: 543px;
+    font-size: 14px;
     font-weight: 800;
-    letter-spacing: 11.5px;
-    color: white;
-    text-align: center;
-    text-shadow: 3px 4px 20px rgba(48, 48, 48, 0.7);
-}
-
-.banner:after {
-    content: 'ENJOY THE PLEASURE';
-    background-image: url(../img/circle.svg);
-    background-repeat: no-repeat;
-    position: relative;
-    display: block;
-    width: 380px;
-    height: 61px;
-    font-size: 20px;
-    font-weight: 300;
-    float: left;
-    color: black;
-    transform: rotate(-90deg);
-    left: -208px;
-    top: 303px;
-    padding-left: 30px;
-}
-
-
-}
+    letter-spacing: 1px;
+    padding: 4px 38px;
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    }
+    
+    .aside-down {
+        height: 350px;
+        width: 1170px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .part1,
+    .part2 {
+        height: 50%;
+        width: 100%;
+    }
+    
+    .part1 {
+        padding-top: 100px;
+        padding-left: 339px;
+        float: left;
+    }
+    
+    #menu1 {
+        margin-left: -60px;
+        padding-left: 0;
+    }
+    
+    .li1 {
+        display: inline-block;
+        float: left;
+        width: 16%;
+        text-align: center;
+        margin-right: 2px;
+        margin-left: 2px;
+    }
+    
+    .li1::after {
+        content: ' ';
+        display: block;
+        width: 5px;
+        height: 3px;
+        background-color: black;
+        margin-top: -12px;
+    }
+    
+    .li1:first-child {
+        padding-left: 23px;
+    }
+    
+    .li1:first-child::after {
+        display: none;
+    }
+    
+    .part2 {
+        padding-top: 10px;
+        padding-left: 166px;
+        padding-right: 166px;
+        text-align: center;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 2;
+    }
+    
+    .principles {
+        height: 468px;
+        margin-bottom: 117px;
+    }
+    
+    #pr1,
+    #pr2,
+    #pr3 {
+        display: inline-block;
+        position: relative;
+        height: 470px;
+        width: 33.07%;
+        margin: 0;
+    }
+    
+    #pr2 img {
+        padding-left: 14px;
+    }
+    
+    #pr3 img {
+        padding-left: 28px;
+    }
+    
+    #pr1 h1,
+    #pr2 h1,
+    #pr3 h1 {
+        position: absolute;
+        color: white;
+        font-size: 79.02px;
+        font-weight: 800;
+        padding-top: 134px;
+        padding-left: 107px;
+        letter-spacing: 8px;
+        text-shadow: 0px 0px 20px rgba(48, 48, 48, 0.7);
+    }
+    
+    #foot {
+        display: flex;
+        flex-direction: column;
+        height: 460px;
+        margin-top: -14px;
+    }
+    
+    .part1_1 {
+        height: 180px;
+        width: 100%;
+        padding-top: 100px;
+        padding-left: 0px;
+        float: left;
+    }
+    
+    .part2_1 {
+        height: 135px;
+        width: 100%;
+    }
+    
+    .part3_1 {
+        height: 143px;
+        width: 100%;
+        margin-top: 0;
+    }
+    
+    .navig {
+        margin-left: 155px;
+        padding-top: 33px;
+    }
+    
+    .li1_1 {
+        display: inline;
+        float: left;
+        text-align: center;
+        margin-right: 51px;
+        margin-left: 20px;
+    }
+    
+    .li1_1::after {
+        content: ' ';
+        display: block;
+        width: 5px;
+        height: 3px;
+        background-color: black;
+        margin-top: -12px;
+        margin-left: -37px;
+    }
+    
+    .li1_1:first-child {
+        padding-left: 23px;
+    }
+    
+    .li1_1:first-child::after {
+        display: none;
+    }
+    
+    .part2_1 {
+        text-align: center;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 2;
+        padding-top: 37px;
+    }
+    
+    .block {
+        margin-TOP: 62px;
+        font-size: 0;
+        text-align: center;
+    }
+    
+    .block a {
+        display: inline-block;
+        width: 38px;
+        height: 38px;
+        vertical-align: top;
+        margin: 0 5px;
+        background-image: url('../img/sprite.png');
+        background-position: -10px -55px;
+        transition: all 0.3s;
+    }
+    
+    .block .fb:hover {
+        background-position: -10px -10px;
+    }
+    
+    .block .tw:hover {
+        background-position: -58px -10px;
+    }
+    
+    .block .tw {
+        background-position: -58px -55px;
+    }
+    
+    .block .you:hover {
+        background-position: -107px -10px;
+    }
+    
+    .block .you {
+        background-position: -107px -55px;
+    }
+    
+    .block .sm:hover {
+        background-position: -155px -10px;
+    }
+    
+    .block .sm {
+        background-position: -155px -55px;
+    }
+    
+    .block .inst {
+        background-position: -203px -55px;
+    }
+    
+    .block .inst:hover {
+        background-position: -203px -10px;
+    }
