--- a/css/normalize.css
+++ b/css/normalize.css
@@ -22,9 +22,9 @@ html {
  * Remove the margin in all browsers (opinionated).
  */
 
-/*body {
-  margin: 0;
-}*/
+body {
+  margin: auto;
+}
 
 /**
  * Add the correct display in IE 9-.
