--- a/css/style.css
+++ b/css/style.css
@@ -4,39 +4,63 @@
     }
     
     body {
-        max-width: 1170px;
-        height: 4200px;
         margin: auto;
+        max-width: 1170px;
         font-family: 'Open Sans', sans-serif;
     }
     
     header {
         display: flex;
         flex-direction: column;
-        height: 742px;
+        max-height: 742px;
         margin-bottom: -48px;
+    }
+    
+
+    .container,
+    .container1,
+    .container2,
+    .container3,
+    .container4,
+    .container5,
+    .container6,
+    .container7,
+    {
+        margin: auto;
+        height: auto;
+        position: relative;
+    }
+    
+    .container {
+        display: flex;
+        flex-direction: column;
     }
     
     .logobox {
         display: flex;
-        height: 180px;
+        max-height: 180px;
     }
     
     #log {
         width: 50%;
-        padding: 74px 0;
+        padding: 6% 0;
     }
     
     #navig {
         width: 50%;
     }
-
+    
     #pos {
         display: flex;
-        justify-content: space-between;
-        width: 479px;
+        max-width: 479px;
         margin-left: 101px;
         margin-top: 72px;
+    }
+    
+    #pos a {
+        margin-left: 9.5%;
+        padding-top: 1%;
+        float: right;
     }
     
     li {
@@ -45,10 +69,12 @@
     
     #pos a:hover,
     .navig a:hover,
-    #menu1 a:hover{
+    #menu1 a:hover {
         color: green;
         text-shadow: 2px 2px 10px rgba(60, 90, 90, 0.7);
     }
+    
+    #a1 {}
     
     a {
         font-size: 20px;
@@ -57,14 +83,14 @@
         text-decoration: none;
     }
     
-    #underl {
+    #underla {
         display: block;
-        width: 105px;
+        width: 9%;
         height: 5px;
         border: 1px solid black;
         background-color: black;
-        margin-left: 218px;
         margin-top: 7px;
+        margin-left: 42%;
     }
     
     .banner {
@@ -84,8 +110,8 @@
         position: absolute;
         width: 542px;
         height: 200px;
-        margin-top: 168px;
-        margin-left: 317px;
+        margin-top: 14.5%;
+        margin-left: 27%;
         font-size: 90px;
         font-weight: 800;
         letter-spacing: 11.5px;
@@ -118,6 +144,7 @@
     .article2,
     .article3,
     .article4 {
+        max-width: 1170px;
         display: flex;
         justify-content: space-between;
     }
@@ -146,9 +173,10 @@
     
     .box1,
     .box2 {
-        width: 540px;
+        width: 47%;
     }
     
+
     .article1 .box1 {
         padding-top: 100px;
     }
@@ -173,16 +201,18 @@
         padding-top: 0;
     }
     
-    .box2 .b2time, .box1 .b1time{
+    .box2 .b2time,
+    .box1 .b1time {
         font-size: 25px;
         font-weight: 800;
-       
     }
     
-.box2 .b2time{
-     padding-left: 471px;
-}
-    .box1 h1, .box1 h2,
+    .box2 .b2time {
+        padding-left: 471px;
+    }
+    
+    .box1 h1,
+    .box1 h2,
     .box2 h2 {
         font-weight: 700;
         text-transform: uppercase;
@@ -191,7 +221,8 @@
         margin-bottom: 21px;
     }
     
-    .box1 h1, .box1 h2 {
+    .box1 h1,
+    .box1 h2 {
         padding-left: 0;
     }
     
@@ -210,9 +241,11 @@
         font-size: 79px;
     }
     
-.article4 .box2 h2{
-    padding-left: 12px;
-}
+    .article4 .box2 h2 {
+        padding-left: 12px;
+    }
+    
+
     .box1 p,
     .box2 p {
         font-size: 15px;
@@ -240,7 +273,7 @@
         width: 25%;
         height: 110px;
         position: absolute;
-        margin-left: 447px;
+        margin-left: 17.2%;
         margin-top: -160px;
     }
     
@@ -317,8 +350,7 @@
         margin-top: -501px;
         margin-bottom: 66px;
     }
-    
-    .article3 .box2::after {
+    /*.article3::before {
         content: 'FREE PSD  TEMPLATE AVAILABLE OD SYMU.CO';
         font-size: 18px;
         font-weight: 300;
@@ -330,9 +362,9 @@
         float: left;
         color: black;
         transform: rotate(-90deg);
-        left: 352px;
-        top: -328px;
-    }
+        left: -120px;
+        top: 327px;
+    }*/
     
     .deco3 {
         width: 440px;
@@ -369,20 +401,19 @@
         color: green;
         text-shadow: 0px 0px 20px black;
         opacity: 0.95;
-        
     }
     
     .sign_up a {
-            width: 155px;
-    height: 31px;
-    border-radius: 45px;
-    margin-left: 543px;
-    font-size: 14px;
-    font-weight: 800;
-    letter-spacing: 1px;
-    padding: 4px 38px;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
+        width: 155px;
+        height: 31px;
+        border-radius: 45px;
+        margin-left: 543px;
+        font-size: 14px;
+        font-weight: 800;
+        letter-spacing: 1px;
+        padding: 4px 38px;
+        background-color: #ffffff;
+        border: 1px solid #ffffff;
     }
     
     .aside-down {
@@ -400,7 +431,7 @@
     
     .part1 {
         padding-top: 100px;
-        padding-left: 339px;
+        padding-left: 28%;
         float: left;
     }
     
@@ -437,8 +468,8 @@
     
     .part2 {
         padding-top: 10px;
-        padding-left: 166px;
-        padding-right: 166px;
+        padding-left: 10%;
+        padding-right: 10%;
         text-align: center;
         font-size: 15px;
         font-weight: 400;
@@ -456,13 +487,11 @@
         display: inline-block;
         position: relative;
         height: 470px;
-        width: 33.07%;
+        width: 33%;
         margin: 0;
     }
     
-    #pr2 img {
-        padding-left: 14px;
-    }
+    
     
     #pr3 img {
         padding-left: 28px;
@@ -598,3 +627,9 @@
     .block .inst:hover {
         background-position: -203px -10px;
     }
+
+@media(max-width: 1024px){
+    .deco, #underla{
+        display: none;
+    }
+}
